# Earthquake-simulation-tools

./: .dockerignore  .env.example  .gitignore  .prettierrc  Dockerfile  Dockerfile.Svelte  Makefile  README.md  docker-compose.yml  eslint.config.js  index.html  index.json  manifest.json  mosiri.code-workspace  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  vite.config.ts
backend/: .env  .env.example  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
backend/src/: config.py  server.py
backend/src/schema/: earthquake_preset.py  region_preset.py  simulation_reserve.py
dynamodb/: data_input.sh  minio_set.sh
dynamodb/test_data/: preset_info_type1_job1.json  preset_info_type1_job2.json  preset_info_type2_job1.json  preset_info_type2_job3.json  preset_info_type2_job4.json  simuration_resurve.json  viewer_info.json
frontend/: .env.dev  .env.mock  .env.prod  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/amplify/: team-provider-info.json
frontend/src/: main.css  main.ts
manual/: devMan.html  toc.html  toc.json  userMan.html
markdown/: index.md
markdown/manual/: devMan.md  toc.yml  userMan.md
src/routes/: +layout.svelte
static/: shelter.geojson  shizuoka-mesh.geojson  toda-mesh.geojson  toshikeikakudouro.geojson
static/11224/: backgrounds.json  config.json  initial_view.json  menu.json  settings.json
viewer/: .env  .gitignore  .prettierignore  .prettierrc  README.md  next.config.js  package.json  tailwind.config.js  tsconfig.json
(+242 files in other folders)
