[tool.poetry]
name = "bridge-eqsimu-lambda-prod"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.7"
fastapi = "^0.109.2"
mangum = "^0.17.0"
uvicorn = "^0.25.0"
psycopg = "^3.1.17"
psycopg-binary = "^3.1.17"
pydantic-settings = "^2.0.2"
awscli = "^1.32.19"
pandas = "^2.2.0"
python-multipart = "^0.0.7"
pyjwt = "^2.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
